src/objects/FSTR__PCE_Checklist__c.object
<CustomObject>
    <fields>
        <fullName>FSTR__Business_Process__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Process</label>
        <referenceTo>FSTR__Business_Process__c</referenceTo>
        <relationshipName>Checklists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Checklists</relationshipLabel>
        <relationshipName>PCE_Checklists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Checklists</relationshipLabel>
        <relationshipName>PCE_Checklists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Definition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Definition</label>
        <referenceTo>FSTR__PCE_Definition__c</referenceTo>
        <relationshipName>Checklists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__IsComplete__c</fullName>
        <formula>FSTR__Total_Items__c  == FSTR__Total_Complete__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsComplete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSTR__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Checklists</relationshipLabel>
        <relationshipName>PCE_Checklists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Checklists</relationshipLabel>
        <relationshipName>PCE_Checklists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__PercentComplete__c</fullName>
        <formula>/* Total complete divided by total items. */
FSTR__Total_Complete__c /  FSTR__Total_Items__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FSTR__ProcessRecordId__c</fullName>
        <externalId>true</externalId>
        <label>Process Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Step_Object__c</fullName>
        <formula>HYPERLINK(&apos;/&apos;+ FSTR__ProcessRecordId__c , &apos;Link&apos;,&apos;_blank&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Step Object</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Step__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Step</label>
        <referenceTo>FSTR__PCE_Step__c</referenceTo>
        <relationshipName>Checklists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Total_Complete__c</fullName>
        <label>Total Complete</label>
        <summaryFilterItems>
            <field>FSTR__PCE_Checklist_Item__c.FSTR__IsComplete__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>FSTR__PCE_Checklist_Item__c.FSTR__Checklist__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>FSTR__Total_Items__c</fullName>
        <label>Total Items</label>
        <summaryForeignKey>FSTR__PCE_Checklist_Item__c.FSTR__Checklist__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Checklist</label>
    <nameField>
        <label>Checklist Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Checklists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>